DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/PSR_Type__c.field-meta.xml
<CustomField>
    <fullName>PSR_Type__c</fullName>
    <label>PSR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Meeting</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Technical Presentation</fullName>
            </value>
            <value>
                <fullName>One-Time Pricing</fullName>
            </value>
            <value>
                <fullName>OTP RFP/ RFQ</fullName>
            </value>
            <value>
                <fullName>RFP/ RFQ</fullName>
            </value>
            <value>
                <fullName>Technical Proposal</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Group Service Request</fullName>
            </value>
            <value>
                <fullName>Corporate Mobile</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
                <isActive>false</isActive>
                <label>Design</label>
            </value>
            <value>
                <fullName>Pricing/Scoping</fullName>
                <isActive>false</isActive>
                <label>Pricing/Scoping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>