DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Redundancy_Currently_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Redundancy_Currently_in_Place__c</fullName>
    <label>Redundancy Currently in Place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>