DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Remote_Office_1_Meet_Me_Conference__c.field-meta.xml
<CustomField>
    <fullName>Remote_Office_1_Meet_Me_Conference__c</fullName>
    <label>Remote Office 1 Meet Me Conference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>