DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Date__c</fullName>
    <inlineHelpText>What date do you need a response by - Ensure your request is in line with lead times or that you have made the team aware of expedite request</inlineHelpText>
    <label>Required Date</label>
    <type>Date</type>
</CustomField>