DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Solution_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Solution_Risk_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solution Risk Assessment</label>
    <type>Checkbox</type>
</CustomField>