DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/SolutionType__c.field-meta.xml
<CustomField>
    <fullName>SolutionType__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connectivity</fullName>
                <label>Local Connectivity</label>
            </value>
            <value>
                <fullName>Regional Connectivity</fullName>
            </value>
            <value>
                <fullName>PBX</fullName>
                <label>Voice (UCaaS, PBX, SIP)</label>
            </value>
            <value>
                <fullName>Wireless</fullName>
                <label>Wireless (Wi-Fi)</label>
            </value>
            <value>
                <fullName>Security</fullName>
                <label>IT Security (Firewall)</label>
            </value>
            <value>
                <fullName>Switching</fullName>
                <label>Networking (Switches &amp; Routers)</label>
            </value>
            <value>
                <fullName>IP Surveillance</fullName>
                <label>Surveillance &amp; Security</label>
            </value>
            <value>
                <fullName>Servers</fullName>
                <label>Servers &amp; Storage (xaaS)</label>
            </value>
            <value>
                <fullName>Collocation</fullName>
            </value>
            <value>
                <fullName>Video Conferencing</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Personal Computers</fullName>
            </value>
            <value>
                <fullName>Cabling</fullName>
            </value>
            <value>
                <fullName>Hyperprotect Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Business Hub</fullName>
            </value>
            <value>
                <fullName>GSM New Contract</fullName>
            </value>
            <value>
                <fullName>GSM Contract Resign</fullName>
            </value>
            <value>
                <fullName>GSM RFQ/RFP</fullName>
            </value>
            <value>
                <fullName>GSM Addendum</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
                <isActive>false</isActive>
                <label>LAN</label>
            </value>
            <value>
                <fullName>Routing</fullName>
                <isActive>false</isActive>
                <label>Routing</label>
            </value>
            <value>
                <fullName>Storage</fullName>
                <isActive>false</isActive>
                <label>Storage</label>
            </value>
            <value>
                <fullName>WAN</fullName>
                <isActive>false</isActive>
                <label>WAN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>