DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <inlineHelpText>Does the client have special requirements such as encryption, archiving etc, please detail</inlineHelpText>
    <label>Special Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>