DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent to Vendor</fullName>
            </value>
            <value>
                <fullName>Improper Scoping – Customer Requirements</fullName>
            </value>
            <value>
                <fullName>Improper Scoping – Fibre/ MW Survey</fullName>
            </value>
            <value>
                <fullName>Meeting Postponed/ Cancelled</fullName>
            </value>
            <value>
                <fullName>No Product</fullName>
            </value>
            <value>
                <fullName>Wrong Product</fullName>
            </value>
            <value>
                <fullName>Customer Not Interested</fullName>
            </value>
            <value>
                <fullName>Customer Has No Budget</fullName>
            </value>
            <value>
                <fullName>No Feedback from AM</fullName>
            </value>
            <value>
                <fullName>No Feedback from Customer</fullName>
            </value>
            <value>
                <fullName>Not Necessary</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Wrong PSR Type or Sales Stage</fullName>
            </value>
            <value>
                <fullName>Requires Gate Approval</fullName>
            </value>
            <value>
                <fullName>Sent to Sales</fullName>
            </value>
            <value>
                <fullName>Created in Error</fullName>
                <isActive>false</isActive>
                <label>Created in Error</label>
            </value>
            <value>
                <fullName>Customer No longer Interested</fullName>
                <isActive>false</isActive>
                <label>Customer No longer Interested</label>
            </value>
            <value>
                <fullName>Design</fullName>
                <isActive>false</isActive>
                <label>Design</label>
            </value>
            <value>
                <fullName>Design validation</fullName>
                <isActive>false</isActive>
                <label>Design validation</label>
            </value>
            <value>
                <fullName>On Hold - More Info Rqrd</fullName>
                <isActive>false</isActive>
                <label>On Hold - More Info Rqrd</label>
            </value>
            <value>
                <fullName>Phone Call/Face to Face with Customer followed by email</fullName>
                <isActive>false</isActive>
                <label>Phone Call/Face to Face with Customer followed by email</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
                <isActive>false</isActive>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>Requirements Gathering</fullName>
                <isActive>false</isActive>
                <label>Requirements Gathering</label>
            </value>
            <value>
                <fullName>Requirements Review</fullName>
                <isActive>false</isActive>
                <label>Requirements Review</label>
            </value>
            <value>
                <fullName>Returned to PreSales</fullName>
                <isActive>false</isActive>
                <label>Returned to PreSales</label>
            </value>
            <value>
                <fullName>Returned to Sales</fullName>
                <isActive>false</isActive>
                <label>Returned to Sales</label>
            </value>
            <value>
                <fullName>Sent to Contractor</fullName>
                <isActive>false</isActive>
                <label>Sent to Contractor</label>
            </value>
            <value>
                <fullName>With Core Technical</fullName>
                <isActive>false</isActive>
                <label>With Core Technical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>