DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Systems_Integrated__c.field-meta.xml
<CustomField>
    <fullName>Systems_Integrated__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <inlineHelpText>List the systems that are integrated with email</inlineHelpText>
    <label>Systems Integrated</label>
    <type>TextArea</type>
</CustomField>