DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Tele_Remote_Worker__c.field-meta.xml
<CustomField>
    <fullName>Tele_Remote_Worker__c</fullName>
    <label>Tele/Remote Worker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>