DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Telephony_Features__c.field-meta.xml
<CustomField>
    <fullName>Telephony_Features__c</fullName>
    <label>Telephony Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACD/IVR</fullName>
            </value>
            <value>
                <fullName>Conference Bridge</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Paging</fullName>
            </value>
            <value>
                <fullName>Presence</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>