DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Type_of_WiFi_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Type_of_WiFi_Restriction__c</fullName>
    <inlineHelpText>Restriction to websites / bandwidth restriction</inlineHelpText>
    <label>Type of WiFi Restriction</label>
    <type>TextArea</type>
</CustomField>