DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Version_Microsoft_Licence__c.field-meta.xml
<CustomField>
    <fullName>Version_Microsoft_Licence__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <label>Version Microsoft Licence</label>
    <type>TextArea</type>
</CustomField>