DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/WAN_Devices_in_Place__c.field-meta.xml
<CustomField>
    <fullName>WAN_Devices_in_Place__c</fullName>
    <inlineHelpText>Provide details of WAN devices already in place, Models, locations etc</inlineHelpText>
    <label>WAN Devices in Place</label>
    <type>TextArea</type>
</CustomField>