DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/What_is_the_approved_discount__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_approved_discount__c</fullName>
    <inlineHelpText>percent of discount</inlineHelpText>
    <label>What is the approved discount?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>