DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/z_DeprecatedTCV__c.field-meta.xml
<CustomField>
    <fullName>z_DeprecatedTCV__c</fullName>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>