DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/recordTypes/Pre_Sales_Request.recordType-meta.xml
<RecordType>
    <fullName>Pre_Sales_Request</fullName>
    <active>true</active>
    <label>Pre Sales Request</label>
</RecordType>