DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/validationRules/Deletion_Forbidden.validationRule-meta.xml
<ValidationRule>
    <fullName>Deletion_Forbidden</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c , &quot;Completed&quot;), ISNULL( Completed_Date__c  ))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Requests cannot be deleted once it has been marked as completed.</errorMessage>
</ValidationRule>