DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/validationRules/Must_Enter_A_Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Enter_A_Completed_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c , &quot;Complete&quot;), ISNULL( Completed_Date__c  ))</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>You Must enter a Completed Date</errorMessage>
</ValidationRule>