DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/validationRules/Must_Enter_a_Completed_Date_if_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Enter_a_Completed_Date_if_Cancelled</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c , &quot;Cancelled&quot;), ISNULL( Completed_Date__c  ))</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>You Must enter a Completed Date once the request is cancelled</errorMessage>
</ValidationRule>