DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/validationRules/Must_enter_complexity_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_enter_complexity_reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Complexity__c , &quot;Complex&quot;) &amp;&amp;  ISBLANK( ComplexityReason__c)</errorConditionFormula>
    <errorDisplayField>ComplexityReason__c</errorDisplayField>
    <errorMessage>Please enter a Complexity Reason</errorMessage>
</ValidationRule>