DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/validationRules/Solution_Request_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Solution_Request_Details</fullName>
    <active>true</active>
    <description>Details about the solution requested are required</description>
    <errorConditionFormula>AND(
 RecordTypeId = &quot;012d0000000tLzt&quot;,
 RecordTypeId = &quot;012d0000000tM03&quot;,
 RecordTypeId = &quot;012d0000000tM08&quot;,
ISBLANK(Solution_Request_Details__c))

&amp;&amp; $Profile.Name &lt;&gt;&quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>Solution_Request_Details__c</errorDisplayField>
    <errorMessage>Please fill out the Solution Request Details field.</errorMessage>
</ValidationRule>