DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/Antigua_Pre_Sales_Team_Pre_Sales_Request.listView-meta.xml
<ListView>
    <fullName>Antigua_Pre_Sales_Team_Pre_Sales_Request</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Priority__c</columns>
    <columns>PSR_Type__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Required_Date__c</columns>
    <columns>SolutionType__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Antigua Pre Sales Team</label>
    <queue>Antigua_Pre_Sales_Team</queue>
    <sharedTo>
        <group>All_Antigua_and_Barbuda_Users</group>
    </sharedTo>
</ListView>