DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/Bermuda_Pre_Sales_Team_Pre_Sales_Request.listView-meta.xml
<ListView>
    <fullName>Bermuda_Pre_Sales_Team_Pre_Sales_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Bermuda Pre Sales Team</label>
    <queue>Bermuda_Pre_Sales_Team</queue>
    <sharedTo>
        <group>All_Bermuda_Users</group>
    </sharedTo>
</ListView>