DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/Cayman_Pre_Sales_Team_Pre_Sales_Request.listView-meta.xml
<ListView>
    <fullName>Cayman_Pre_Sales_Team_Pre_Sales_Request</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Priority__c</columns>
    <columns>PSR_Type__c</columns>
    <columns>SolutionType__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Assigned_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Cayman Pre Sales Team</label>
    <queue>Cayman_Pre_Sales_Team</queue>
    <sharedTo>
        <group>All_Cayman_Islands_Users</group>
    </sharedTo>
</ListView>