DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/FWI_Pre_Sales_Team_Pre_Sales_Request.listView-meta.xml
<ListView>
    <fullName>FWI_Pre_Sales_Team_Pre_Sales_Request</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Pre_Sales_Engineer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Requested_Date__c</columns>
    <columns>Status__c</columns>
    <columns>SubStatus__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Digicel_Country__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled,Rejected</value>
    </filters>
    <label>FWI Pre Sales Team</label>
    <queue>FWI_Pre_Sales_Team</queue>
    <sharedTo>
        <group>All_FWI_Users</group>
    </sharedTo>
</ListView>