DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/Haiti_Pre_Sales_Team_Pre_Sales_Request.listView-meta.xml
<ListView>
    <fullName>Haiti_Pre_Sales_Team_Pre_Sales_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Haiti Pre Sales Team</label>
    <queue>Haiti_Pre_Sales_Team</queue>
    <sharedTo>
        <group>All_Haiti_Users</group>
    </sharedTo>
</ListView>