DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/Hyperprotect_Cybersecurity_Pre_Sales_Request.listView-meta.xml
<ListView>
    <fullName>Hyperprotect_Cybersecurity_Pre_Sales_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Hyperprotect Cybersecurity</label>
    <queue>Hyperprotect_Cybersecurity</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>