DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/ICT_Barbados_Pre_Sales_Request_Complete.listView-meta.xml
<ListView>
    <fullName>ICT_Barbados_Pre_Sales_Request_Complete</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Requested_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>BB-</value>
    </filters>
    <label>ICT Barbados Pre Sales Request Complete</label>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Technical</group>
    </sharedTo>
</ListView>