DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/ICT_Barbados_Pre_Sales_Requests_Requeste.listView-meta.xml
<ListView>
    <fullName>ICT_Barbados_Pre_Sales_Requests_Requeste</fullName>
    <columns>Requested_Date__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Required_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <filters>
        <field>Digicel_Country__c</field>
        <operation>equals</operation>
        <value>Barbados</value>
    </filters>
    <label>ICT Barbados Pre Sales Requests Requeste</label>
    <language>en_US</language>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Service_Delivery_Team</group>
        <group>ICT_Barbados_Technical</group>
    </sharedTo>
</ListView>