DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/My_Open_PSR_s.listView-meta.xml
<ListView>
    <fullName>My_Open_PSR_s</fullName>
    <columns>Subject__c</columns>
    <columns>NAME</columns>
    <columns>Requested_Date__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled,Not Qualified,Created in Error</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pre_Sales_Request__c.Pre_Sales_Request</value>
    </filters>
    <label>My Open PSR&apos;s</label>
    <sharedTo>
        <role>Anguilla_Pre_Sales_Engineer</role>
        <role>Antigua_Pre_Sales_Engineer</role>
        <role>Aruba_Pre_Sales_Engineer</role>
        <role>Barbados_Business_Solutions_Presales_Engineer</role>
        <role>Barbados_Head_of_Pre_Sales_Service_Delivery</role>
        <role>Bermuda_Head_of_Pre_Sales_Service_Delivery</role>
        <role>Bermuda_Pre_Sales_Engineer</role>
        <role>Curacao_Pre_Sales_Engineer</role>
        <role>Dominica_Pre_Sales_Engineer</role>
        <role>El_Salvador_Head_of_Pre_Sales_Service_Delivery</role>
        <role>El_Salvador_Pre_Sales_Engineer</role>
        <role>FWI_Pre_Sales_Engineer</role>
        <role>Grenada_Pre_Sales_Engineer</role>
        <role>Guyana_Pre_Sales_Engineer</role>
        <role>Haiti_Pre_Sales_Engineer</role>
        <role>Jamaica_Head_of_Pre_Sales_Service_Delivery</role>
        <role>Jamaica_Pre_Sales</role>
        <role>PNG_Pre_Sales</role>
        <role>Panama_Head_of_Pre_Sales_Service_Delivery</role>
        <role>Panama_Pre_Sales_Engineer</role>
        <role>St_Kitts_Pre_Sales_Engineer</role>
        <role>St_Vincent_Pre_Sales_Engineer</role>
        <role>Suriname_Pre_Sales_Engineer</role>
        <role>TCI_Pre_Sales_Engineer</role>
        <role>Trinidad_Head_Pre_Sales_Service_Delivery</role>
        <role>Trinidad_Pre_Sales_Manager</role>
        <role>Trinidad_Pre_Sales_Team</role>
    </sharedTo>
</ListView>