DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/My_PSR_s_PSR_s_I_created.listView-meta.xml
<ListView>
    <fullName>My_PSR_s_PSR_s_I_created</fullName>
    <columns>Subject__c</columns>
    <columns>NAME</columns>
    <columns>Requested_Date__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedByCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My PSR&apos;s (PSR&apos;s I created)</label>
</ListView>