DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/listViews/PNG_Pre_Sales_Team_Pre_Sales_Request.listView-meta.xml
<ListView>
    <fullName>PNG_Pre_Sales_Team_Pre_Sales_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG Pre Sales Team</label>
    <queue>PNG_Pre_Sales_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>